# lilnouns-bots

./: .dev.vars.example  .dockerignore  .editorconfig  .gitignore  .licrc  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yaml  package.json  pnpm-lock.yaml  rustfmt.toml  wrangler.toml
.github/: dependabot.yml
.github/workflows/: build.yml  deploy.yml
graphql/queries/: lil_nouns_query.graphql  nouns_query.graphql  prop_house_query.graphql  prop_lot_query.graphql  snapshot_query.graphql
graphql/schemas/: lil_nouns_schema.graphql  nouns_schema.graphql  prop_house_schema.graphql  prop_lot_schema.graphql  snapshot_schema.graphql
src/: cache.rs  discord_bot.rs  event.rs  lib.rs  main.rs  prop_house_discord_bot.rs  prop_lot_discord_bot.rs  utils.rs
src/lil_nouns/: fetcher.rs  mod.rs
src/lil_nouns/handler/: discord.rs  farcaster.rs  mod.rs
src/meta_gov/: fetcher.rs  mod.rs
src/meta_gov/handler/: discord.rs  farcaster.rs  mod.rs
src/prop_house/: cacher.rs  config.rs  fetcher.rs  handler.rs  mod.rs
src/prop_house/handler/: discord.rs  farcaster.rs  mod.rs
src/prop_lot/: cacher.rs  config.rs  fetcher.rs  handler.rs  mod.rs
src/prop_lot/handler/: discord.rs  farcaster.rs  mod.rs
src/second_market/: fetcher.rs  mod.rs
src/second_market/handler/: discord.rs  farcaster.rs  mod.rs
src/utils/: ens.rs  ethereum.rs  fname.rs  link.rs  mod.rs
