[package]
name = "lilnouns-bots"
version = "1.0.0-beta.0"
authors = ["Milad Nekofar <milad@nekofar.com>"]
edition = "2021"
description = "Our bots are designed to keep the Lil Nouns DAO community informed and engaged."
repository = "https://github.com/lilnouns/lilnouns-bots"
license = "Apache-2.0"
include = ["*.graphql"]
rust-version = "1.72.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
cfg-if = "1.0.0"
chrono = "0.4.31"
console_error_panic_hook = { version = "0.1.7", optional = true }
ethers = { version = "2.0.10", default-features = false }
getrandom = { version = "0.2.10", features = ["js"] }
graphql_client = { version = "0.13.0", features = ["reqwest"] }
log = "0.4.20"
regex = "1.10.1"
reqwest = "0.11.22"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
worker = "0.0.18"
worker_logger = { version = "0.2.0", features = ["color"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
