[package]
name = "lilnouns-bots"
version = "1.3.0-alpha.19"
authors = ["Milad Nekofar <milad@nekofar.com>"]
edition = "2021"
description = "Our bots are designed to keep the Lil Nouns DAO community informed and engaged."
repository = "https://github.com/lilnouns/lilnouns-bots"
license = "Apache-2.0"
include = ["*.graphql"]
rust-version = "1.72.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
cfg-if = "1.0.0"
chrono = "0.4.40"
console_error_panic_hook = { version = "0.1.7", optional = true }
ethers = { version = "2.0.14", default-features = false }
getrandom = { version = "0.2.15", features = ["js"] }
graphql_client = { version = "0.14.0", features = ["reqwest"] }
idna = "1.0.0"
log = "0.4.27"
regex = "1.11.1"
reqwest = "0.11.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
worker = "0.5.0"
worker-macros = "0.5.0"
tracing = "0.1"
tracing-web = "0.1.3"
tracing-subscriber = { version = "0.3.19", features = ['time', 'json'] }
time = { version = "0.3.41", features = ['wasm-bindgen'] }

[profile.release]
lto = true
strip = true
codegen-units = 1
